; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_shm.c_fpm_shm_alloc.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_shm.c_fpm_shm_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_ANONYMOUS = common dso_local global i32 0, align 4
@MAP_SHARED = common dso_local global i32 0, align 4
@ZLOG_SYSERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"unable to allocate %zu bytes in shared memory\00", align 1
@fpm_shm_size = common dso_local global i64 0, align 8
@MAP_FAILED = common dso_local global i8* null, align 8
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fpm_shm_alloc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i32, i32* @PROT_READ, align 4
  %7 = load i32, i32* @PROT_WRITE, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @MAP_ANONYMOUS, align 4
  %10 = load i32, i32* @MAP_SHARED, align 4
  %11 = or i32 %9, %10
  %12 = call i8* @mmap(i32 0, i64 %5, i32 %8, i32 %11, i32 -1, i32 0)
  store i8* %12, i8** %4, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %19, label %15

15:                                               ; preds = %1
  %16 = load i32, i32* @ZLOG_SYSERROR, align 4
  %17 = load i64, i64* %3, align 8
  %18 = call i32 (i32, i8*, i64, ...) @zlog(i32 %16, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i64 %17)
  store i8* null, i8** %2, align 8
  br label %24

19:                                               ; preds = %1
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* @fpm_shm_size, align 8
  %22 = add i64 %21, %20
  store i64 %22, i64* @fpm_shm_size, align 8
  %23 = load i8*, i8** %4, align 8
  store i8* %23, i8** %2, align 8
  br label %24

24:                                               ; preds = %19, %15
  %25 = load i8*, i8** %2, align 8
  ret i8* %25
}

declare dso_local i8* @mmap(i32, i64, i32, i32, i32, i32) #1

declare dso_local i32 @zlog(i32, i8*, i64, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
